examples/spork/failing/conflicting_class_visibility/ExpectedCurrently.java
public private static class Cls {}